--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -47,7 +47,7 @@ jobs:
 
     - name: Versão Bump e push tag
       id: version
-      uses: anothrNick/github-tag-action@v1.40.0
+      uses: anothrNick/github-tag-action@1.70.0
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         tag_prefix: "v"
