--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -35,22 +35,23 @@ jobs:
     - name: Determinar tipo de bump de versão
       id: determine-version-bump
       run: |
-        if [[ "${{ github.event.head_commit.message }}" == *"fix/"* ]]; then
+        if [[ "${GITHUB_REF_NAME}" == *"fix/"* ]]; then
           echo "bump_type=patch" >> $GITHUB_ENV
-        elif [[ "${{ github.event.head_commit.message }}" == *"feat/"* ]]; then
+        elif [[ "${GITHUB_REF_NAME}" == *"feat/"* ]]; then
           echo "bump_type=minor" >> $GITHUB_ENV
-        elif [[ "${{ github.event.head_commit.message }}" == *"BREAKING CHANGE"* ]]; then
+        elif [[ "${GITHUB_REF_NAME}" == *"release/"* ]]; then
           echo "bump_type=major" >> $GITHUB_ENV
         else
-          echo "bump_type='patch'" >> $GITHUB_ENV
+          echo "bump_type=patch" >> $GITHUB_ENV
         fi
+
 
     - name: Versão Bump e push tag
       id: version
       uses: anothrNick/github-tag-action@1.70.0
       with:
         DEFAULT_BUMP: ${{ env.bump_type }}
-        RELEASE_BRANCHES: release.*
+        RELEASE_BRANCHES : release.*
         WITH_V : true
 
 
