--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -49,11 +49,10 @@ jobs:
     - name: Versão Bump e push tag
       id: version
       uses: anothrNick/github-tag-action@1.70.0
-      with:
+      env:
         DEFAULT_BUMP: ${{ env.bump_type }}
         RELEASE_BRANCHES : release.*
         WITH_V : true
-
 
     - name: Instalar GitHub CLI
       run: sudo apt-get install -y gh
