Adiciona permissão para githubtoken

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -7,6 +7,9 @@ on:
     branches:
       - main  # Executa o workflow quando há um push direto na branch main
 
+permissions:
+  contents: write  # Permissões para ler e escrever em conteúdos, incluindo tags e releases
+
 jobs:
   release:
     if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main' || github.ref == 'refs/heads/main'
@@ -53,16 +56,16 @@ jobs:
         DEFAULT_BUMP: ${{ env.bump_type }}
         RELEASE_BRANCHES : release.*
         WITH_V: true
-        DRY_RUN: true
+        # DRY_RUN: true
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Instalar GitHub CLI
-      run: sudo apt-get install -y gh
+    # - name: Instalar GitHub CLI
+    #   run: sudo apt-get install -y gh
 
-    - name: Criar release
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: |
-        TAG_NAME="${{ steps.version.outputs.new_tag }}"
-        RELEASE_NAME="Release $TAG_NAME"
-        gh release create $TAG_NAME --title "$RELEASE_NAME" --notes "Release gerada automaticamente pela GitHub Action."
+    # - name: Criar release
+    #   env:
+    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #   run: |
+    #     TAG_NAME="${{ steps.version.outputs.new_tag }}"
+    #     RELEASE_NAME="Release $TAG_NAME"
+    #     gh release create $TAG_NAME --title "$RELEASE_NAME" --notes "Release gerada automaticamente pela GitHub Action."
