--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -48,7 +48,6 @@ jobs:
           echo "bump_type=patch" >> $GITHUB_ENV
         fi
 
-
     - name: Versão Bump e push tag
       id: version
       uses: anothrNick/github-tag-action@1.70.0
@@ -62,10 +61,28 @@ jobs:
     - name: Instalar GitHub CLI
       run: sudo apt-get install -y gh
 
+    - name: Buscar descrição do PR
+      id: pr-description
+      if: github.event.pull_request
+      run: |
+        PR_NUMBER="${{ github.event.pull_request.number }}"
+        PR_BODY=$(gh pr view "$PR_NUMBER" --json body -q ".body")
+        echo "PR_BODY=$PR_BODY" >> $GITHUB_ENV
+
+    - name: Buscar último commit
+      id: last-commit
+      run: |
+        COMMIT_MESSAGE=$(git log -1 --pretty=format:"%s")
+        echo "COMMIT_MESSAGE=$COMMIT_MESSAGE" >> $GITHUB_ENV
+
     - name: Criar release
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         TAG_NAME="${{ steps.version.outputs.new_tag }}"
-        RELEASE_NAME="Release $TAG_NAME"
-        gh release create $TAG_NAME --title "$RELEASE_NAME" --notes "Release gerada automaticamente pela GitHub Action."
+        RELEASE_NAME="$TAG_NAME"
+        NOTES="${{ env.PR_BODY }}"
+        if [ -z "$NOTES" ]; then
+          NOTES="${{ env.COMMIT_MESSAGE }}"
+        fi
+        gh release create "$TAG_NAME" --title "$RELEASE_NAME" --notes "$NOTES"
