--- a/.github/workflows/auto-approve.yaml
+++ b/.github/workflows/auto-approve.yaml
@@ -1,9 +1,11 @@
 name: Auto-Approve Pull Request
 
-
 on:
   pull_request:
     types: [opened, synchronize]
+
+permissions:
+  pull-requests: write
 
 jobs:
   auto-approve:
