--- a/.github/workflows/auto-approve.yaml
+++ b/.github/workflows/auto-approve.yaml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Aprovar o Pull Request automaticamente
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
         run: |
           PR_NUMBER=$(gh pr list --state open --json number --jq '.[0].number')
           if [ -n "$PR_NUMBER" ]; then
