Adiciona permissão de leitura no pull request

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -9,6 +9,7 @@ on:
 
 permissions:
   contents: write  # Permissões para ler e escrever em conteúdos, incluindo tags e releases
+  pull-requests: read
 
 jobs:
   release:
