--- a/configs/.env.example
+++ b/configs/.env.example
@@ -19,6 +19,12 @@ ENV=dev # production|dev
 
 ENV_PROVIDER=local #local
 
+#ENV_PROVIDER=VAULT_HASHICORP
+VAULT_HASHICORP_HOST=http://host.docker.internal:8200
+VAULT_HASHICORP_TOKEN=s.xxxxxxx
+VAULT_HASHICORP_SECRET_PATH=s.xxxxxxx
+
+
 WEB_SERVER_HOST=0.0.0.0
 WEB_SERVER_PORT=8080
 #WEB_SERVER_CERTIFICATE=./server/server.crt #Opcional
