Add NATS queue provider

--- a/configs/.env.example
+++ b/configs/.env.example
@@ -47,6 +47,7 @@ RABBITMQ_USER=root
 RABBITMQ_PASSWORD=password
 RABBITMQ_PORT=5672
 RABBITMQ_VHOST=/
+NATS_URL=nats://localhost:4222
 
 JTW_SECRET=my-pass
 
