feat: remove gRPC web server example and related files
- Deleted the gRPC web server example implementation from `examples/grpc_web_server`.
- Removed the `store.go` file which contained the EventConsumerHandler and its methods.

feat: add NATS consumer example with simplified consumer registration

- Introduced a new example in `examples/nats_addconsumer/main.go` demonstrating the use of a new `AddConsumer` method for NATS.
- Updated the `nats_pub_sub` example to utilize the new consumer interface.

feat: implement AddConsumer method in NATS and RabbitMQ providers

- Added `AddConsumer` method to both NATS and RabbitMQ providers to streamline consumer registration and queue configuration.

fix: improve telemetry context handling

- Updated the `StartChildSpan` method in the telemetry package to handle cases where no parent context exists, logging a warning and using `context.Background()` instead.

--- a/configs/.env.example
+++ b/configs/.env.example
@@ -41,6 +41,7 @@ REDIS_PASSWORD=
 MONGO_URI=mongodb://root:password@host.docker.internal/admin
 MONGO_DATABASE=nanogo
 
+QUEUE_PROVIDER=RABBITMQ # RABBITMQ|NATS
 RABBITMQ_PROTOCOL=amqp
 RABBITMQ_HOST=host.docker.internal
 RABBITMQ_USER=root
